--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.55",
+		"@sveltejs/adapter-static": "^1.0.0-next.21",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.3.7",
 		"cssnano": "^5.0.8",
