--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-	"name": "sveltekit-tailwind",
+	"name": "intro-component-with-signup-form",
 	"version": "0.0.1",
+	"main": "build/index.js",
 	"scripts": {
 		"dev": "svelte-kit dev --host",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"start": "node build/index"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.55",
